--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=DESKTOP-LLSO1JN\\SQLEXPRESS;Database=UdemyNLayerDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
